# FoneCheck

./: .dockerignore  .gitignore  CORRIGIR_PYTHON313.md  CREDENCIAIS_ACESSO.md  DEPLOY_INSTRUCOES_FINAIS.md  DEPLOY_NETLIFY.md  DEPLOY_RENDER.md  DEPLOY_RENDER_FINAL.md  DEPLOY_RENDER_FIXED.md  DEPLOY_RENDER_SOLUCAO_FINAL.md  Dockerfile  FORCAR_PYTHON311.md  FORCE_UPDATE.txt  Procfile  README.md  SOLUCAO_PYTHON311.md  SOLUCAO_PYTHON313.md  app.py  build.sh  deploy-render.sh  incident.xlsx  index.html  install-python311.sh  netlify.toml  pyproject.toml  render-deploy.md  render-deploy.yaml  render-docker-final.yaml  render-docker-python311.yaml  render-docker.yaml  render-force-python311.yaml  render-manual.yaml  render-python310.yaml  render.yaml  requirements-lock.txt  requirements-minimal.txt  requirements-netlify.txt  requirements-python310.txt  requirements-python311.txt  requirements-render.txt  (+5 more)
static/: script.js  styles.css
templates/: index.html  login.html
